MS-2: Чат
* Добавлен роут удаления чата
* Добавлен роут получения списка чатов
