# docs/swagger.json
@@ -10,6 +10,33 @@
     "basePath": "/",
     "paths": {
         "/chats": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Данный роут пощволяет получить список чатов пользоватедя который из запрашивает",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chats"
+                ],
+                "summary": "Get chats list",
+                "operationId": "get_chats_list",
+                "responses": {
+                    "200": {
+                        "description": "Список чатов успешно получен",
+                        "schema": {
+                            "$ref": "#/definitions/chatsdto.GetChatsResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -48,15 +75,67 @@
                     }
                 }
             }
+        },
+        "/chats/{chatID}": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Данный роут позволяет удалить чат по его ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chats"
+                ],
+                "summary": "Delete chat by id",
+                "operationId": "delete_chat_by_id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID чата",
+                        "name": "chatID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Чат успешно удален",
+                        "schema": {
+                            "$ref": "#/definitions/chatsdto.DeleteChatResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "chatsdto.CreateChatRequest": {
+        "chatsdto.Chat": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
                 "owner_id": {
                     "type": "integer"
                 },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "chatsdto.CreateChatRequest": {
+            "type": "object",
+            "properties": {
                 "title": {
                     "type": "string"
                 }
@@ -76,6 +155,25 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "chatsdto.DeleteChatResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "chatsdto.GetChatsResponse": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/chatsdto.Chat"
+                    }
                 }
             }
         }
