# internal/api/chats/chat.go
@@ -3,11 +3,11 @@ package chats
 type Chat struct {
 	ChatID    int64  `json:"chat_id"`
 	Title     string `json:"title"`
-	OwnerID   string `json:"owner_id"`
+	OwnerID   int64  `json:"owner_id"`
 	CreatedAt int64  `json:"created_at"`
 }
 
-func NewChat(chatID int64, title string, ownerID string, createdAt int64) Chat {
+func NewChat(chatID int64, title string, ownerID int64, createdAt int64) Chat {
 
 	return Chat{
 		ChatID:    chatID,
