# internal/api/chats/dto/deletechat.go
@@ -1,9 +1,11 @@
 package chatsdto
 
-type DeleteChatRequest struct {
-	ChatID int `json:"chat_id"`
-}
-
 type DeleteChatResponse struct {
 	Message string `json:"message"`
+}
+
+func NewDeleteChatResponse() *DeleteChatResponse {
+	return &DeleteChatResponse{
+		Message: "Chat deleted",
+	}
 }
